@@ -1,12 +1,13 @@
 Revision history for Python extension KRISP
 
-$Id: Changes,v 1.8 2010-09-10 19:20:54 oops Exp $
+$Id: Changes,v 1.9 2010-09-10 19:55:44 oops Exp $
 
 2.1.0
 	* Mon Sep 11 2010 JoungKyun.Kim <http://oops.org>
 	- linked with over libkrisp 3.1.0
 	- support whether ipv4 address or long ip address with arguments
       of py_netmask, py_mask2prefix, py_network, py_broadcast APIs
+	- add set_mtime_interval api
 
 
 2.0.1
